--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,17 +1,17 @@
 settings:
     notify: false
     textcommand_prefix: "!"
-    token: "MTMwNDQzNDE5MzQ4MDI4NjI0OA.GR27Un.too8KTvpXjlQaMkTGpeWjVqiO_wBZzXSMYBGzc" 
+    token: "<bot_token>" 
     guilds:
-        "1304434443301421077":
+        "<server_id>":
             name: "Макси"
-            log_channel: "1304490899832832010"
+            log_channel: "<log_channel_id>"
             owners: 
-            - "763821526461972480"
+            - "<owner_id>"
             roles:
                 staff: 
-                - "1304435308862902434"
-                blacklisted: []
+                - "<staff_role>"
+                blacklisted: [] #"<blacklisted_role_id>"
     client:
-        id: "1304434193480286248"
-        secret: "d5ZemDFZldl9AoRGQ34Pr3q9wWmsxRTq"
+        id: "<bot_client_id>"
+        secret: "<bot_client_secret>"
